Fix header to not wrap in smallest screen

--- a/06_advanced/14_photo_gallelry/main.css
+++ b/06_advanced/14_photo_gallelry/main.css
@@ -24,9 +24,12 @@ main {
 
 header {
   align-self: center;
-  font-size: 2rem;
   grid-area: title;
   justify-self: center;
+}
+
+h1 {
+  font-size: 2rem;
 }
 
 figure {
